--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://mongodb:27017"
+  },
+
   "AllowedHosts": "*"
+  
 }
