--- a/WebApiCaso/WebApiCaso/docker-compose.yml
+++ b/WebApiCaso/WebApiCaso/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "8080:8080"
     depends_on:
       - mongodb
+    networks:
+      - mynetwork
 
   mongodb:
     image: mongo
@@ -17,6 +19,9 @@ services:
       - dbdata:/data/db
     ports:
       - "27017:27017"
-
+    networks:
+      - mynetwork
 volumes:
   dbdata:
+networks:
+  mynetwork:
